--- a/index.html
+++ b/index.html
@@ -1,52 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
-    />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://www.caijinfeng.com/favicon.ico"
-    />
-    <link
-      rel="stylesheet"
-      href="/generata-test-data/vendors.d12d9004.chunk.css"
-    />
-    <link rel="stylesheet" href="/generata-test-data/umi.a6e66545.css" />
-    <script>
-      window.routerBase = "/";
-    </script>
-    <script>
-      //! umi version: 3.5.21
-    </script>
-    <script src="https://www.googletagmanager.com/gtag/js?id=G-69DRVDC8WH"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-69DRVDC8WH");
-    </script>
-    <script>
-      !(function () {
-        var e = localStorage.getItem("dumi:prefers-color"),
-          t = window.matchMedia("(prefers-color-scheme: dark)").matches,
-          r = ["light", "dark", "auto"];
-        document.documentElement.setAttribute(
-          "data-prefers-color",
-          e === r[2] ? (t ? r[1] : r[0]) : r.indexOf(e) > -1 ? e : r[0]
-        );
-      })();
-    </script>
-  </head>
-  <body>
-    <div id="root"></div>
+<html lang="en">
 
-    <script src="/generata-test-data/vendors.030bbaa9.async.js"></script>
-    <script src="/generata-test-data/umi.70c63aee.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>rc-hooks</title>
+</head>
+
+<body>
+  <script>location.replace("/generate-test-data/site/index.html");</script>
+</body>
+
 </html>
